// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Usermotion's group destination action: all fields 1`] = `
Object {
  "id": "vd^9vzD#xh*",
  "properties": Object {
    "testType": "vd^9vzD#xh*",
    "website": "vd^9vzD#xh*",
  },
}
`;

exports[`Testing snapshot for Usermotion's group destination action: required fields 1`] = `
Object {
  "id": "vd^9vzD#xh*",
  "properties": Object {},
}
`;
